[WIP] Dynamo can trace data_ptr
ghstack-source-id: a88fe3e48f8123723dd4c7c7e43f4f3c1984212e
Pull Request resolved: https://github.com/pytorch/pytorch/pull/136880

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5402,6 +5402,13 @@
   dispatch:
     CompositeExplicitAutograd: detach_
 
+- func: sym_data_ptr(Tensor self) -> SymInt
+  variants: function
+  device_check: NoCheck
+  device_guard: False
+  dispatch:
+    CompositeExplicitAutograd: sym_data_ptr
+
 - func: size.int(Tensor self, int dim) -> int
   variants: function
   device_check: NoCheck
